# tkintertools-3d

./: CHANGELOG.md  README.md  TODO.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml
.github/workflows/: python-package.yml
maliang/three/: __init__.py  engine.py
tkintertools/three/: __init__.py  constants.py  engine.py  engine_.py  geometries.py  mathmetica.py
