[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "maliang-three"
authors = [{ name = "Xiaokang2022", email = "2951256653@qq.com" }]
maintainers = [{ name = "Xiaokang2022", email = "2951256653@qq.com" }]
description = "Extension package for maliang to simple 3D drawings"
readme = "README.md"
license = { text = "MIT License" }
requires-python = ">=3.10"
keywords = ["tkinter", "maliang", "3d", "cross-platform"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Intended Audience :: Developers",
    "Typing :: Typed",
]
dependencies = ["maliang>=3.0.0rc6", "typing-extensions"]
dynamic = ["version"]

[project.urls]
"Bug tracker" = "https://github.com/Xiaokang2022/maliang-three/issues"
"Source code" = "https://github.com/Xiaokang2022/maliang-three"

[tool.setuptools.dynamic]
version = { attr = "maliang.three.__version__" }

[tool.setuptools.packages.find]
include = ["maliang*"]

[tool.pylint]
output-format = "colorized"
reports = "y"
fail-on = "E,F"
fail-under = 9
disable = 'line-too-long'

[tool.pytest.ini_options]
addopts = ["--color=yes", "--reruns=3"]

# python -m build
# python -m twine upload dist/*
